avance en hub de pedidos

--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -9,6 +9,9 @@ nav{
     padding-top: 4rem;
     min-height: 80vh;
 }
-footer{
+.wrap-content {
+    min-height: 80vh;
+}
+footer {
     height: 10vh;
 }
