--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -18,10 +18,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href='@Url.Action("Home/Index")'>INICIO<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href='@Url.Action("home/Index")'>INICIO<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Platos</a>
                 <a class="nav-item nav-link" href="#">Sobre Nosotros</a>
-                <a class="nav-item nav-link disabled" href="#">Contacto</a>
+                <a class="nav-item nav-link" href="#">Contacto</a>
+                <a class="nav-item nav-link" href='@Url.Action("Index", "dashboard")'>Dashboard</a>
             </div>
         </div>
     </nav>
