estructura base con template para dashboar y rutas

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Customer/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Clientes";
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 
-<h2>Pedidos</h2>
-
+<h2>Clientes</h2>
