--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -3,30 +3,180 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Administración</title>
+    <title>@ViewData["Title"] | LA PESCA</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/bootstrap/css/bootstrap.css" />
+        @*<link rel="stylesheet" href="~/bootstrap/css/bootstrap.css" />*@
         <link rel="stylesheet" href="~/css/master.css" />
+        <link rel="stylesheet" href="~/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+        <link rel="stylesheet" href="~/chartist/css/chartist.min.css">
+        <link rel="stylesheet" href="~/css/bootstrap.min.css">
+        <link rel="stylesheet" href="~/css/style.css">
+        <link rel="stylesheet" href="~/css/responsive.css">
     </environment>
 </head>
 <body>
-    <div class="wrap-content">
-        @RenderBody()
-        <hr />
+    <div id="wrapper">
+
+        <!-- navbar -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="brand">
+                <a href="index.html">
+                    La Pesca
+                </a>
+            </div><!--/.brand -->
+            <div class="container-fluid">
+                <div class="navbar-btn">
+                    <button type="button" class="btn-toggle-fullwidth">
+                        <i class="lnr lnr-arrow-left-circle"></i>
+                    </button>
+                </div><!--/.navbar-btn -->
+                <div class="navbar-menu">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle icon-menu" data-toggle="dropdown">
+                                <i data-feather="bell"></i>
+                                <span class="badge badge-bg-1">2</span>
+                            </a>
+                            <ul class="dropdown-menu notifications">
+                                <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>System space is almost full</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-danger"></span>You have 9 unfinished tasks</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Monthly report is available</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>Weekly meeting in 1 hour</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Your request has been approved</a></li>
+                                <li><a href="#" class="more">See all notifications</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle icon-menu" data-toggle="dropdown">
+                                <i data-feather="mail"></i>
+                                <span class="badge badge-bg-1">3</span>
+                            </a>
+                            <ul class="dropdown-menu notifications">
+                                <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>System space is almost full</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-danger"></span>You have 9 unfinished tasks</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Monthly report is available</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>Weekly meeting in 1 hour</a></li>
+                                <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Your request has been approved</a></li>
+                                <li><a href="#" class="more">See all notifications</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <img src="assets/images/parson.png" class="img-circle" alt="parson-img">
+                                <i class="icon-submenu fa fa-angle-down"></i>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#"><i class="lnr lnr-user"></i> <span>My Profile</span></a></li>
+                                <li><a href="#"><i class="lnr lnr-envelope"></i> <span>Message</span></a></li>
+                                <li><a href="#"><i class="lnr lnr-cog"></i> <span>Settings</span></a></li>
+                                <li><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div><!--/.container-fluid -->
+
+        </nav><!--/nav -->
+        <!-- END NAVBAR -->
+        <!-- LEFT SIDEBAR -->
+        <div id="sidebar-nav" class="sidebar">
+            <div class="sidebar-scroll">
+                <nav>
+                    <ul class="nav">
+
+                        <li class="active">
+                            <a href='@Url.Action("Index", "Dashboard")'>
+                                <i data-feather="home"></i> <span>Dashboard</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href='@Url.Action("Index", "Client")'>
+                                <i data-feather="package"></i> <span>Clientes</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href='@Url.Action("Index", "Dish")'>
+                                <i data-feather="file-text"></i> <span>Platos</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href='@Url.Action("Index", "Invoice")'>
+                                <i data-feather="grid"></i> <span>Ventas</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href='@Url.Action("Index", "User")'>
+                                <i data-feather="map"></i> <span>Usuarios</span>
+                            </a>
+                        </li>
+                </nav>
+            </div>
+
+        </div>
+        <!-- END LEFT SIDEBAR -->
+        <!-- MAIN -->
+        <div class="main">
+
+            <!-- MAIN CONTENT -->
+            <div class="main-content">
+                <div class="container-fluid">
+                @RenderBody()
+                </div><!--/.container-fluid-->;
+
+            </div><!--/.main-content-->
+
+        </div>
+        <!-- END MAIN -->
+        <div class="clearfix"></div>
+        <footer>
+            <div class="container-fluid">
+                <p>&copy; 2021 <a href="#">La Pesca</a>. Reservados todos los derechos.</p>
+            </div>
+
+        </footer>
 
     </div>
-    <footer class="bg-dark text-white text-center p-2" >
-        <p>&copy; 2021 - LA PESCA</p>
-    </footer>
+    
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
         <script src="~/bootstrap/js/bootstrap.js"></script>
         <script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
-        <script src="~/js/dashboard/dashboard.js" ></script>
+        <script src="~/js/dashboard/dashboard.js"></script>
     </environment>
+    <!--jquery-1.12.4.min.js-->
+    <script src="~/js/jquery.min.js"></script>
 
+    <!--chartist.min.js-->
+    <script src="~/chartist/js/chartist.min.js"></script>
+    <script src="~/chartist/js/chartist-tooltip-plugin.js"></script>
+    <script src="~/chartist/js/chartist-custom.js"></script>
+
+    <!--bootstrap.min.js-->
+    <script src="~/js/bootstrap.min.js"></script>
+
+    <!--jquery.slimscroll.min.js-->
+    <script src="~/js/jquery.slimscroll.min.js"></script>
+
+    <!--feather.min.js-->
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+
+    <!-- DataMaps Plugin Js -->
+    <script src="~/js/d3.min.js"></script>
+    <script src="~/js/topojson.js"></script>
+    <script src="~/js/datamaps.world.min.js"></script>
+
+    <!--fontawesome-all.min.js-->
+    <script src="~/js/fontawesome-all.min.js"></script>
+
+    <!--Custom JS-->
+    <script src="~/js/custom.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
