--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Table/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Table/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Mesas";
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
 
-<h2>Pedidos</h2>
+<h2>Mesas</h2>
 
