--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -3,4 +3,6 @@
     ViewData["Title"] = "Inicio";
 }
 
-<h1>Hola BB con template</h1>
+<header>
+    <img src="./images/HeaderBackground.jpg" alt="Restaurante La Pesca"  />
+</header>
