--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -19,11 +19,11 @@
 
     <div class="wrap-main">
         @RenderBody()
-        <hr />
-
     </div>
-    <footer class="bg-dark text-white text-center p-2" >
-        <p>&copy; 2021 - LA PESCA</p>
+    <footer class="bg-dark">
+        <div class="container-fluid">
+            <p>&copy; 2021 <a href="#">La Pesca</a>. Reservados todos los derechos.</p>
+        </div>
     </footer>
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
