Context EF desde Infraestructure; Consulta de todos los productos como prueba

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<Neutrinodevs.PedidosOnline.Domain.DTOs.Product.ProductDTO>
+@{
     Layout = "_MasterLayout";
     ViewData["Title"] = "Inicio";
 }
@@ -29,5 +30,5 @@
     });
 </script>
 <div class="container-fluid">
-
+    @Html.Partial("~/Views/Dish/Partial/_Dishes.cshtml", Model)
 </div>
