--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -40,6 +40,7 @@ nav {
     box-sizing: border-box;
     background-color: rgba(0,0,0,0);
     transition: 0.6s;
+    z-index: 1000;
 }
 
 nav button{
@@ -89,4 +90,41 @@ nav ul li a:hover{
 nav.sticky .logo,
 nav.sticky ul li a {
     color: #fff;
+}
+
+card{
+    border-radius:0 !important;
+}
+
+.card-product:hover{
+    cursor: pointer;
+}
+
+/*.card-product img {
+    transition: 0.4s all ease-in-out;
+}
+
+.card-product:hover img {
+    transform: scale(1.1);
+}*/
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.card-product:hover .overlay {
+    opacity: 1;
+}
+.text{
+    color:#fff;
+    padding:10px;
 }
