--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/bootstrap/css/bootstrap.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/bootstrap/css/bootstrap.css
@@ -4724,7 +4724,7 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
     background-color: #fff;
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem
+    /*border-radius: .25rem*/
 }
 
     .card > hr {
