--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -128,3 +128,10 @@ card{
     color:#fff;
     padding:10px;
 }
+
+.pushbar-carrito {
+    padding: 15px;
+    /*background-color: #000;
+    color: #fff;*/
+}
+
