--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -135,3 +135,11 @@ card{
     color: #fff;*/
 }
 
+.quantity-product {
+    padding: 15px;
+    width: 80px;
+    max-width: 180px;
+    min-width: 80px;
+    font-size: 30px;
+    font-weight: bold;
+}
