--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dish/Partial/_Dishes.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dish/Partial/_Dishes.cshtml
@@ -3,7 +3,8 @@
     @foreach (var item in Model)
     {
         <div class="col-md-6 col-lg-4 col-sm-12">
-            <div class="card m-2 card-product" data-toggle="modal" data-target="#product-modal">
+            <div class="card m-2 card-product" data-target="#product-modal" 
+                 data-dish="@item.JsonProduct">
                 <img src="~/images/products/@item.Imagen" />
                 <div class="card-body">
                     <strong>@item.Nombre</strong>
