--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -34,28 +34,48 @@
         }
 
     });
+
+    function setQuantity(quantity) {
+        
+        let current_quantity = parseInt($(".quantity-product").val());
+        console.log(quantity);
+        if (current_quantity >= 1) {
+            let new_quantity = current_quantity + quantity;
+            $(".quantity-product").val(new_quantity);
+        }
+
+    }
 </script>
 <!-- Modal -->
 <div class="modal fade" id="product-modal" tabindex="-1" role="dialog" aria-labelledby="product-modalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <h5 class="modal-title" id="product-title"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <button type="button" class="btn btn-dark btn-lg"><i class="fa fa-minus"></i></button>
+                <div class="row container">
+                    <div class="col-6">
+                        <div id="wrap-price" class="text-center">
+                            <span class="price">$</span><span class="price" id="modal-price"></span>
+                        </div>
                     </div>
-                    <input type="text" class="quantity-product" name="name" value="1" maxlength="4" />
-                    <div class="input-group-append">
-                        <button type="button" class="btn btn-dark btn-lg"><i class="fa fa-plus"></i></button>
-                    </div>
-                    <div class="input-group-append">
-                        <button type="button" class="form-control btn btn-primary">Agregar al carrito</button>
+                    <div class="col-6">
+                        <div class="input-group mb-3 mt-3">
+                            <div class="input-group-prepend">
+                                <button type="button" class="btn btn-dark btn-lg" onclick="setQuantity(-1)"><i class="fa fa-minus"></i></button>
+                            </div>
+                            <input type="text" class="quantity-product" name="name" value="1" maxlength="4" />
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-dark btn-lg" onclick="setQuantity(1)"><i class="fa fa-plus"></i></button>
+                            </div>
+                            <div class="input-group-append mt-3">
+                                <button type="button" class="form-control btn btn-primary" ><i class="fa fa-plus-circle"></i> Agregar al carrito</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
