--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/bootstrap/css/bootstrap.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/bootstrap/css/bootstrap.css
@@ -3168,14 +3168,14 @@ a.btn.disabled, fieldset:disabled a.btn {
     padding: .5rem 1rem;
     font-size: 1.25rem;
     line-height: 1.5;
-    border-radius: .3rem
+    /*border-radius: .3rem*/
 }
 
 .btn-group-sm > .btn, .btn-sm {
     padding: .25rem .5rem;
     font-size: .875rem;
     line-height: 1.5;
-    border-radius: .2rem
+    /*border-radius: .2rem*/
 }
 
 .btn-block {
