se permite vaciar carrito y se agrega sweetAlert2

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <li><a href="#">Inicio</a></li>
             <li><a href="#">Sobre nosotros</a></li>
             <li>
-                <button class="btn btn-primary" @*data-pushbar-target="pushbar-cart"*@ id="btn_shopping_cart">
+                <button class="btn btn-primary" id="btn_shopping_cart">
                     <i class="fa fa-shopping-cart"></i>
                     <span id="quantity_cart" class="badge badge-primary">0</span>
                 </button>
@@ -87,7 +87,7 @@
                                 <button type="button" class="btn btn-dark btn-lg" onclick="setQuantity(1)"><i class="fa fa-plus"></i></button>
                             </div>
                             <div class="input-group-append mt-3">
-                                <button type="button" class="form-control btn btn-primary" id="add-cart"><i class="fa fa-plus-circle"></i> Agregar al carrito</button>
+                                <button type="button" class="form-control btn btn-primary" id="add-cart"><i class="fa fa-cart-plus"></i> Agregar al carrito</button>
                             </div>
                         </div>
                     </div>
