--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="~/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
         <link rel="stylesheet" href="~/css/pushbar.css" />
+        <link rel="stylesheet" href="~/css/sweetalert2.min.css">
         <link rel="stylesheet" href="~/css/master.css" />
     </environment>
 </head>
@@ -24,7 +25,7 @@
             </div>
             <h5 class="text-center">Mi Pedido</h5>
             <hr class="separator" />
-            <label>SUBTOTAL: $123.33</label>
+            <label>SUBTOTAL: $<span id="subtotal-cart"></span></label>
             <button class="btn btn-primary btn-block" id="btn_order">ORDENAR</button>
             <button class="btn btn-secondary btn-block" id="btn_empty_cart">VACIAR CARRITO</button>
             <hr />
@@ -44,6 +45,7 @@
         <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
         <script src="~/bootstrap/js/bootstrap.js"></script>
         <script src="~/js/pushbar.js"></script>
+        <script src="~/js/sweetalert2.all.min.js"></script>
         <script src="~/js/order/shopping-cart.js"></script>
     </environment>
 
