pantalla base de mi pedido

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <header>
-    <nav>
+    <nav class="nav-home">
         <div class="logo"><span>LA PESCA</span></div>
         <ul>
             <li><a href="#">Inicio</a></li>
