--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <footer class="bg-dark text-white text-center">
+    <footer class="bg-black text-white text-center pt-2">
         <p>&copy; 2021 La Pesca. Reservados todos los derechos.</p>
     </footer>
     <environment include="Development">
