--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -8,8 +8,10 @@ back-primary {
     color: #ff5b0e;
 }
 
-nav{
+nav {
     min-height: 10vh;
+    background: #000 !important;
+    height: 80px;
 }
 .wrap-main {
     /*padding-top: 4rem;
@@ -30,7 +32,7 @@ header {
     background-repeat: no-repeat;
 }
 
-nav {
+.nav-home {
     position: fixed;
     width: 100%;
     height: 100px;
@@ -41,6 +43,11 @@ nav {
     background-color: rgba(0,0,0,0);
     transition: 0.6s;
     z-index: 1000;
+}
+
+nav {
+    padding: 10px 90px;
+    transition: 0.6s;
 }
 
 nav button{
@@ -193,4 +200,10 @@ card{
 }
 .separator {
     border: 1px solid #212529;
+}
+.bg-black{
+    background-color:#000;
+}
+.header-page{
+    height: 30% !important;
 }
