--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -26,7 +26,7 @@
             <h5 class="text-center">Mi Pedido</h5>
             <hr class="separator" />
             <label>SUBTOTAL: $<span id="subtotal-cart"></span></label>
-            <button class="btn btn-primary btn-block" id="btn_order">ORDENAR</button>
+            <a href='@Url.Action("Index", "Cart")' class="btn btn-primary btn-block" id="btn_order">ORDENAR</a>
             <button class="btn btn-secondary btn-block" id="btn_empty_cart">VACIAR CARRITO</button>
             <hr />
             <div id="wrap-cart-items">
