DBContext con inyección de dependencias y validaciòn de usuario/cliente duplicado

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Cart/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Mi Pedido";
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
-@Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
+@await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <div class="container pb-4" style="min-height:80vh">
     <div class="py-4">
         <h4>Mi Pedido</h4>
