Inclusión de api google maps para seleccionar el lugar

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="~/css/sweetalert2.min.css">
         <link rel="stylesheet" href="~/css/master.css" />
     </environment>
+    @RenderSection("HeaderScript", required: false)
 </head>
 <body>
     @*<partial name="_CookieConsentPartial" />*@
