--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -3,8 +3,22 @@
     ViewData["Title"] = "Mi pedido";
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
 }
+@section HeaderScript{
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script>
+        let map;
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 20,
+            });
+        }
+    </script>
+}
 @await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <div class="container">
+    
     <div class="row my-5">
         <div class="col-lg-7 col-md-7 col-sm-12">
             <h3>Crear una cuenta</h3>
@@ -13,7 +27,7 @@
             {
                 <div class="form-group">
                     <label for="identification">Cédula</label>
-                    <input id="identification" name="identification" type="text" class="form-control col-6 effect-8" maxlength="10"/>
+                    <input id="identification" name="identification" type="text" class="form-control col-6 effect-8" maxlength="10" />
                 </div>
                 <div class="form-group">
                     <label for="name">Nombres</label>
@@ -35,6 +49,11 @@
                     <label for="passsword2">Confirmar contraseña</label>
                     <input id="passsword2" name="passsword2" type="password" class="form-control col-6" />
                 </div>
+                <div class="form-group">
+                    <label for="location">Seleccione su ubicación</label>
+                    <input id="location" name="location" type="text" class="form-control col-6" style="cursor:pointer" />
+                </div>
+
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block">REGISTRARME</button>
                 </div>
@@ -60,7 +79,39 @@
         </div>
     </div>
 </div>
+<!-- Modal -->
+<div class="modal fade" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="map-modalTitle" aria-hidden="true" style="min-width:90%;">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="product-title">Seleccione su ubicación de entrega</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" style="height:100% !important">
+                <div id="map" style="height:100% !important">
 
-@section Scripts{ 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<style>
+    .modal-dialog,
+    .modal-content {
+        height: 90%;
+    }
+
+    .modal-body {
+        /* 100% = dialog height, 120px = header + footer */
+        max-height: calc(100% - 40px);
+        overflow-y: scroll;
+    }
+</style>
+@section Scripts{
+    <script async
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3imid37BAw2_Uwsw59RjLw8DRJuGCbEc&callback=initMap">
+    </script>
     <script src="~/js/order/checkout.js" type="text/javascript"></script>
 } 
