--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/master.css
@@ -234,3 +234,9 @@ input:focus {
     border: 2px solid #000 !important;
     margin: 0 auto;
 }
+
+#map {
+    height: 100%;
+    width: 100%;
+}
+
